# blockaid_task

./: .gitignore  Cargo.toml  README.md  build.rs
abi/: IERC20.json
src/: app.rs  cached.rs  erc20.rs  lib.rs  main.rs
src/abi/: ierc20.rs  mod.rs
www/: index.html  index.js  package-lock.json  package.json
