[package]
name = "my_approvals"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
clap = { version = "4.0", features = ["derive"] }
ethers = { version = "=1.0.2", default-features = false, features = ["abigen", "rustls", "ws"] }
futures = "0.3"
itertools = "0.10"
tokio = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.61"
serde = { version = "1.0", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.45"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.22", features = ["console"] }

[build-dependencies]
ethers = { version = "=1.0.2", default-features = false, features = ["abigen"] }

